[tool.poetry]
name = "brickflows"
version = "0.0.1-pre.36+4a13620"
description = "Deploy scalable workflows to databricks using python"
authors = ["Ashok Singamaneni, Sriharsha Tikkireddy"]
readme = "README.md"
license = "Apache License 2.0"
homepage = "https://github.com/Nike-Inc/brickflow"
repository = "https://github.com/Nike-Inc/brickflow"
packages = [
    { include = "brickflow"},
    { include = "brickflow_plugins"},
]
include = [
    "LICENSE",
    "entrypoint.template",
    "gitignore_template.txt",
]
exclude = ["sample_workflows", "tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | brickflow/tf
  | venv
  | brickflow.egg-info
  | dist
  | brickflow/bundles
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "3.8"
networkx = "3.1"
pendulum = "2.1.2"
Jinja2 = "3.1.2"
click = "^8.1.3"
pluggy = "^1.0.0"
requests = ">=2.28.2 <3.0.0"
pydantic = "^1.10.9"
databricks-sdk = ">=0.1.8 <1.0.0"
pyyaml = "^6.0.0"
# cerberus-python-client = {version = "~2.5.4",  optional = true } # Users might have to manually install cerberus-python-client if required

[tool.poetry.scripts]
bf = "brickflow.cli:cli"
brickflow = "brickflow.cli:cli"

[tool.poetry.group.dev.dependencies]
types-requests = ">=2.28.11.16 <3.0.0.0" # only for development purposes no need to make installation req
types-PyYAML = "^6.0.0" # only for development purposes no need to make installation req
pytest = "7.3.1"
pytest-mock = "3.10.0"
coverage = "7.2.5"
black = "23.3.0"
prospector = "1.10.0"
deepdiff = "^6.3.0"
mypy = "1.3.0"
mkdocs = "1.4.3"
mkdocs-click = "0.8.0"
mkdocs-material = "9.1.12"
mdx-include = ">=1.4.1,<2.0.0"
mkdocs-markdownextradata-plugin = "0.2.5"
mkdocstrings = {version = "0.20.0", extras=["python"]}
mkdocs-autorefs = "0.4.1"
mike = "^1.1.2"
py4j = "^0.10.9.7"
pre-commit = "3.3.1"
datamodel-code-generator = "^0.19.0"
apache-airflow = ">=2.6.3 <2.7.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = true
style = "semver"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '**',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*',
        "*/site-packages/*"
    ]

    [tool.coverage.report]
    skip_empty = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
files = [
    "brickflow/context/*.py",
    "brickflow/cli/*.py",
    "brickflow/hints/*.py",
    "brickflow/engine/*.py",
    "brickflow/resolver/*.py",
    "brickflow/codegen/*.py",
]
follow_imports = "skip"